fix: minor change in mode tab alignment

--- a/src/features/projectsV2/ProjectListControls/styles/ProjectListControls.module.scss
+++ b/src/features/projectsV2/ProjectListControls/styles/ProjectListControls.module.scss
@@ -29,7 +29,7 @@
 
 .searchFieldAndViewTabsContainer {
   display: flex;
-  gap: 5px;
+  justify-content: space-between;
 }
 
 .activeSearchIcon {
